WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/Monthly_Revenue_Forecast_History__c.object-meta.xml
<CustomObject>
    <label>Monthly Revenue Forecast History</label>
    <nameField>
        <displayFormat>MRFH -{0}</displayFormat>
        <label>Monthly Revenue Forecast History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Revenue Forecast Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>