WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <description>Not a lookup field so that records are deleted if related Opportunity is deleted</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>