WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Annual_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Annual_Settlement__c</fullName>
    <description>Number field to preserve figure at historic conversion rates</description>
    <label>Annual Settlement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>