WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Annual_Transaction_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Transaction_Volume__c</fullName>
    <label>Annual Transaction Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>