WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Average_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Transaction_Value__c</fullName>
    <description>Number field to preserve figure at historic conversion rates</description>
    <label>Average Transaction Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>