WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Fees_Per_Txn_POS__c.field-meta.xml
<CustomField>
    <fullName>Fees_Per_Txn_POS__c</fullName>
    <description>Number field to preserve figure at historic conversion rates</description>
    <label>Fees Per Txn POS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>