WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Fees_Per_Txn_POS_converted__c.field-meta.xml
<CustomField>
    <fullName>Fees_Per_Txn_POS_converted__c</fullName>
    <label>Fees Per Txn POS (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>