WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Forecast_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Adjustment__c</fullName>
    <label>Forecast Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>