WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/FSR_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>FSR_Commencement_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FSR Commencement Date</label>
    <type>Date</type>
</CustomField>