WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Implementation_Completion__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Completion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Completion</label>
    <type>Date</type>
</CustomField>