WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Interchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interchange_Rate__c</fullName>
    <label>Interchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>