WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Monthly_Settlement_converted__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Settlement_converted__c</fullName>
    <label>Monthly Settlement (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>