WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/MRF_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>MRF_Created_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MRF Created Date</label>
    <type>Date</type>
</CustomField>