WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/MRF_Id__c.field-meta.xml
<CustomField>
    <fullName>MRF_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MRF Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>