WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/MRF_Name__c.field-meta.xml
<CustomField>
    <fullName>MRF_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MRF Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>