WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Net_Monthly_Revenue_converted__c.field-meta.xml
<CustomField>
    <fullName>Net_Monthly_Revenue_converted__c</fullName>
    <description>Number field to preserve figure at historic conversion rates</description>
    <label>Net Monthly Revenue (converted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>