WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Net_Transaction_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Net_Transaction_Revenue__c</fullName>
    <label>Net Transaction Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>