WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Monthly Revenue Forecast History</relationshipLabel>
    <relationshipName>Monthly_Revenue_Forecast_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>