WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>