WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Opportunity_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Last_Modified_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Last Modified By</label>
    <length>75</length>
    <type>Text</type>
</CustomField>