WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Opportunity_Owner_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Owner Role Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>