WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Ramp__c.field-meta.xml
<CustomField>
    <fullName>Ramp__c</fullName>
    <label>Ramp %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>