WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Ramp_Profile__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Profile__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ramp Profile</label>
    <length>30</length>
    <type>Text</type>
</CustomField>