WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Rebate_Applied__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Applied__c</fullName>
    <label>Rebate % Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>