WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Id__c</fullName>
    <description>In case the Record Type Name is changed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>