WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>