WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Revenue_Commencement__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Commencement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Commencement</label>
    <type>Date</type>
</CustomField>