WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Revenue_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Date</label>
    <type>Date</type>
</CustomField>