WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>