WexGit/Wex_DX/force-app/main/default/objects/Monthly_Revenue_Forecast_History__c/fields/Transactions__c.field-meta.xml
<CustomField>
    <fullName>Transactions__c</fullName>
    <label>MRF Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>